# stocks

./: .envrc  .gitignore  README.md  TODO.md  influxdb.py  requirements.txt  secrets.yml
analysis/: .gitignore  analyze_gmm.py  segment_labels.py  transform_data.py  transformation.py
analysis/analyzers/: data_loader.py  data_segmenter.py  data_transformer.py  multi_ticker_data_loader.py
analysis/categorizers/: gaussian_mixtures.py
analysis/featurizers/: deltas_volume_rsi_vwap.py  ohlcv_to_deltas.py  ohlcv_to_deltas_off_ema.py  (+2 more)
ml/: analyzer.py
models/: play_1_1.ipynb  toy_1.ipynb  two_percent_sniper.ipynb
notebooks/: symbol_dataset_splitting_script.ipynb
schwab-api/: .env.example  .gitignore  README.md  app.py  callback_server.py  get_accounts.py  pyproject.toml  start_server.sh  test_auth.py
schwab-api/.github/: copilot-instructions.md
schwab-api/examples/: place_order.py
schwab-api/schwab_client/: __init__.py  auth.py  client.py
schwab-api/static/: styles.css
schwab-api/views/: authorization_error.html  authorization_failed.html  connection_failed.html  connection_success.html  dashboard.html  index.html  no_auth_code.html  options_chain_error.html  options_chain_form.html  options_chain_table.html
scripts/: explore_trading_plans.py  spy_data.feather  spy_data_testing.feather  spy_data_training.feather  tohlcv.py  tohlcv_txt_to_df.py  trade.py  trading_plan.py  trading_plan_tester.py
services/: tiingo.py
stocks/: settings.py  urls.py
tokens/: schwab_token.json
trading/: laboratory.ipynb  strategy_evaluator.py  strategy_optimizer.py
(+23 files in other folders)
